@@ -24,6 +24,7 @@ Version 0.x - Date TBD
     * Form labels with unwanted fancy-type indentation. [OFB]
     * Proper margin on all form elements. [OFB]
     * No margins for images in headings. [OFB]
+    * Push-x bottom margin. [OFB]
     * 
 
   Misc:
